--- a/loaddata.html
+++ b/loaddata.html
@@ -116,20 +116,21 @@ $(document).ready(function () {
 
 
 <p>Read the spreadsheets (open document spreadsheet) and make a copy that we can use for processing the data.</p>
-<pre class="r"><code>df.raw &lt;- read_ods(path='../Data_Surveys_dirkje.ods',sheet=2,col_types = c(text,numeric,numeric,numeric,numeric,numeric,numeric,numeric,numeric,date))
-df.species &lt;- as.data.frame(read_ods(path='../indicator_species2.ods',sheet=1,col_types = c(text,text)))
-df.species_dirkje_only &lt;- as.data.frame(read_ods(path='../indicator_species2.ods',sheet=2,col_types = c(text,text)))
-df.species_nursery &lt;- as.data.frame(read_ods(path='../indicator_species2.ods',sheet=3,col_types = c(text,text)))
+<pre class="r"><code>df.raw &lt;- read_ods(path='Data_Surveys_dirkje.ods',sheet=2,col_types = c(text,numeric,numeric,numeric,numeric,numeric,numeric,numeric,numeric,date))
+df.species &lt;- as.data.frame(read_ods(path='indicator_species2.ods',sheet=1,col_types = c(text,text)))
+df.species_dirkje_only &lt;- as.data.frame(read_ods(path='indicator_species2.ods',sheet=2,col_types = c(text,text)))
+df.species_nursery &lt;- as.data.frame(read_ods(path='indicator_species2.ods',sheet=3,col_types = c(text,text)))
 df.species_all &lt;- rbind(df.species, df.species_dirkje_only)
 df.species_all$nursery &lt;- str_to_lower(df.species_all$scientific_name) %in% str_to_lower(df.species_nursery$scientific_name)
 df.processed &lt;- df.raw</code></pre>
 <p>Next we’ll create data per site. This will contain the site name, and distance and size of the nursery habitats. We’ll use this data for data analysis, but also to set nice names in the final dataframe (df.sample_data).</p>
 <pre class="r"><code>df.sites &lt;- list() #empty list
 df.sites$name &lt;- c('Antulang','Guinsuan','Malatapay','Andulay','Basak','Lutoban South','Lutoban Pier','Kookoos Nest','Dauin Poblacion') #add the names
-df.sites$distance_seagrass &lt;- c('25','15','0','106','49','22','9','NA','15') 
-df.sites$size_seagrass &lt;- c('0.15','1.83','0','0.01','3.89','15.34','15.18','NA','0.13')
-df.sites$distance_mangroves &lt;- c()
-df.sites$size_mangroves &lt;- c()
+df.sites$distance_seagrass &lt;- c(25,15,53,106,49,22,9,1511,15) 
+df.sites$size_seagrass &lt;- c(0.15,1.83,0.65,0.01,3.89,15.34,15.18,0.05,0.13)
+df.sites$distance_mangroves &lt;- sample(1:1000, 9)
+df.sites$size_mangroves &lt;- sample(1:400, 9)
+df.sites$mpa &lt;- c('non-mpa','non-mpa','non-mpa','mpa','mpa','mpa','non-mpa','non-mpa','mpa')
 df.sites &lt;- data.frame(df.sites)
 
 #we also want nice names for the observers and depths.
