--- a/loaddata.html
+++ b/loaddata.html
@@ -128,8 +128,8 @@ df.processed &lt;- df.raw</code></pre>
 df.sites$name &lt;- c('Antulang','Guinsuan','Malatapay','Andulay','Basak','Lutoban South','Lutoban Pier','Kookoos Nest','Dauin Poblacion') #add the names
 df.sites$distance_seagrass &lt;- c(25,15,53,106,49,22,9,1511,15) 
 df.sites$size_seagrass &lt;- c(0.15,1.83,0.65,0.01,3.89,15.34,15.18,0.05,0.13)
-df.sites$distance_mangroves &lt;- sample(1:1000, 9)
-df.sites$size_mangroves &lt;- sample(1:400, 9)
+df.sites$distance_mangroves &lt;- c(3188,4174,6174,1980,4849,455,182,2166,15336)
+df.sites$size_mangroves &lt;- c(6721,15468,15468,6721,15468,5832,5932,40918,15468)
 df.sites$mpa &lt;- c('non-mpa','non-mpa','non-mpa','mpa','mpa','mpa','non-mpa','non-mpa','mpa')
 df.sites$north &lt;- c('south','north','north','south','north','south','south','south','north')
 df.sites &lt;- data.frame(df.sites)
